k8s/monitoring/prometheus-cilium-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-kube-apiserver
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: prometheus
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
